--- a/cpanel.yml
+++ b/cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=${{ secrets.BLESSYAPP_THEME_DIRECTORY }}
+    - export DEPLOYPATH=/home4/mafrei65/blessyapp.com/wp-content/themes/blessyapp
     - /bin/cp -R * $DEPLOYPATH
